--- a/requirements.txt
+++ b/requirements.txt
@@ -4,5 +4,6 @@ matplotlib>=3.8,<4
 seaborn>=0.13,<0.14
 scikit-learn>=1.4,<2
 kagglehub>=0.2,<1
+pyarrow>=15,<20
 jupyter>=1.0,<2
 ipykernel>=6.29,<7
